@@ -7,6 +7,7 @@ Version 1.4.3 - CVS
   - Added new preference that determines cursor focus when replying
   - HTML Filter bugfixes and further strengthening in response to some
     findings reported by stardust.
+  - Display total number of new messages in newmail-plugin popup window.
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
